--- a/movies/src/App.css
+++ b/movies/src/App.css
@@ -93,6 +93,10 @@ input[type="submit"]:hover {
   min-width: 170px;
 }
 
+.click{
+  cursor:pointer
+}
+
 @media screen and (min-width: 694px) and (max-width: 915px) {
   .movie {
     max-width: 33%;
