--- a/movies/src/App.css
+++ b/movies/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #02ddfa;
   height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 20px;
   cursor: pointer;
 }
@@ -83,7 +83,7 @@ input[type="submit"] {
 
 
 input[type="submit"]:hover {
-  background-color: #282c34;
+  background-color: #02ddfa;
   color: antiquewhite;
 }
 
