--- a/movies/src/App.css
+++ b/movies/src/App.css
@@ -31,7 +31,6 @@
 }
 
 .movies {
-  display: flex;
   flex-wrap: wrap;
   flex-direction: row;
 }
@@ -87,6 +86,10 @@ input[type="submit"]:hover {
   color: antiquewhite;
 }
 
+.columns{
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 .search > input[type="text"]{
   width: 40%;
@@ -114,5 +117,19 @@ input[type="submit"]:hover {
   .movie {
     max-width: 100%;
     margin: auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .column{
+    padding-left: 75px;
+    padding-right: 75px
+  }
+}
+
+@media screen and (max-width: 456px) {
+  .column{
+    padding-left: 25px;
+    padding-right: 25px
   }
 }
